--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3"
+    "bootstrap": "^4.5.3",
+    "firebase": "^8.0.1"
   }
 }
