--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "sass": "node-sass scss/ -o css/",
-    "dev": "parcel index.html",
+    "dev": "parcel *.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
